apps/veripalvelu/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: veripalvelu
  name: veripalvelu-dep
  labels:
    app: veripalvelu
spec:
  replicas: 1
  selector:
    matchLabels:
      app: veripalvelu
  template:
    metadata:
      labels:
        app: veripalvelu
    spec:
      containers:
        - name: veripalvelu
          image: tomjtoth/veripalvelu
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: veripalvelu
  name: postgres-dep
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      volumes:
        - name: db-data
          # I actually don't care about this app's data
          emptyDir: {}

        # fetching shema.sql for postgres
        - name: initdb-d
          emptyDir: {}

      containers:
        - name: postgres
          image: postgres:18.1-alpine3.23

          volumeMounts:
            - name: initdb-d
              mountPath: /docker-entrypoint-initdb.d
            - name: db-data
              mountPath: /var/lib/postgresql/data

          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "vp"]
            initialDelaySeconds: 5
            periodSeconds: 5
